--- a/docs/_theme/styles.css
+++ b/docs/_theme/styles.css
@@ -138,4 +138,50 @@ article.markdown-section {
       }
     }
   }
+
+  /* -- Tabs -- */
+  .docsify-tabs {
+    > button {
+      position: relative;
+      border: none;
+      height: 2.5rem;
+      margin-right: 0.5rem;
+      padding: 0 0.75rem;
+      
+      border-radius: 0.25rem;
+      color: var(--text-gentle);
+      cursor: pointer;
+
+      --bgl-base: var(--bg-base);
+      --bgl-layer: transparent;
+      background:
+        var(--bgl-base)
+        linear-gradient(0, var(--bgl-layer), var(--bgl-layer))!important;
+      
+      &:hover {
+        --bgl-layer: var(--bg-hover);
+      }
+      &:active {
+        --bgl-layer: var(--bg-active);
+      }
+
+      &.docsify-tabs__tab--active {
+        color: var(--accent);
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          left: 0.25rem;
+          right: 0.25rem;
+          bottom: 0.125rem;
+          height: 0.125rem;
+          border-radius: 50vh;
+          background: var(--accent);
+        }
+      }
+    }
+    > div {
+      padding-top: 0.5rem;
+    }
+  }
 }
