--- a/docs/_theme/prism.css
+++ b/docs/_theme/prism.css
@@ -4,6 +4,7 @@ pre {
   border-radius: 0.25rem;
   
   font-family: "Fira Code", monospace;
+  font-size: 1rem;
   font-weight: 400;
   
   code {
@@ -73,5 +74,11 @@ pre {
     &.token.attr-name {
       color: var(--color-yellow);
     }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  pre {
+    font-size: 0.875rem;
   }
 }
