--- a/_theme/styles.css
+++ b/_theme/styles.css
@@ -19,8 +19,11 @@
   outline-offset: 2px;
 }
 
-.github-corner > svg {
-  color: var(--bg-page);
+.github-corner{
+  z-index: 9999;
+   > svg {
+    color: var(--bg-page);
+  }
 }
 
 body, article.markdown-section {
@@ -71,13 +74,6 @@ body, article.markdown-section {
 article.markdown-section {
   max-width: 80ch;
   margin: 0 auto;
-
-  > *:not(h1):not(h2) {
-    margin-left: 1.5rem;
-  }
-  > h1, > h2 {
-    margin-left: 0.5rem;
-  }
   
   /* -- Paragraph -- */
 
@@ -145,8 +141,12 @@ article.markdown-section {
       position: relative;
       border: none;
       height: 2.5rem;
-      margin-right: 0.5rem;
+      margin: 0.25rem;
       padding: 0 0.75rem;
+
+      &:first-of-type {
+        margin-left: 0;
+      }
       
       border-radius: 0.25rem;
       color: var(--text-gentle);
