--- a/_theme/sidebar-toggle.css
+++ b/_theme/sidebar-toggle.css
@@ -85,9 +85,13 @@ body .sidebar-toggle {
 
 @media screen and (max-width: 400px) {
   body .sidebar-toggle {
-    left: var(--toggle-offset);
+    inset: unset;
+    bottom: var(--toggle-offset);
+    right: var(--toggle-offset);
     body.close & {
-      left: var(--toggle-offset);
+      inset: unset;
+      bottom: var(--toggle-offset);
+      right: var(--toggle-offset);
     }
   }
 }
