--- a/docs/_theme/sidebar.css
+++ b/docs/_theme/sidebar.css
@@ -1,24 +1,48 @@
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
   :root:has(body.close), body.close .content {
     overflow: hidden;
   }
-  body.close .content {
-    transform: translateX(-100vw);
-  }
-  body .sidebar {
-    left: 100vw;
+
+  body aside.sidebar {
+    left: -100vw;
     transform: translateX(0);
     width: 100vw;
-  }
-  body.close .sidebar {
-    transform: translateX(-100vw);
+
+    h1.app-name {
+      margin-top: 2rem;
+    }
+    
     .search {
-      padding-left: 3.5rem;
+      margin-top: auto;
+      order: 99;
+      
+      .input-wrap {
+        position: sticky;
+        padding-left: 0.5rem;
+        padding-right: 3.5rem;
+        order: 99;
+        border-top: 4px solid var(--bg-page);
+        border-bottom: none;
+      }
     }
   }
+  
+  body.close {
+    .github-corner {
+      transform: translateX(100vw);
+    }
+    .content {
+      transform: translateX(100vw);
+    }
+    aside.sidebar {
+      transform: translateX(100vw);
+    }
+  } 
 }
 
-aside {
+aside.sidebar {
+  display: flex;
+  flex-direction: column;
   background-color: var(--bg-base);
 
   ul {
@@ -27,13 +51,26 @@ aside {
   }
 
   .search {
+    display: flex;
+    flex-direction: column;
     z-index: 1;
     position: sticky;
     top: 0;
-    border-bottom: 4px solid var(--bg-page);
+    bottom: 0;
     background-color: var(--bg-base);
-    padding: 0.5rem;
+    margin: 0;
+    padding: 0;
+    border: none;
     
+    .input-wrap {
+      position: sticky;
+      top: 0;
+      bottom: 0;
+      padding: 0.5rem;
+      background-color: var(--bg-base);
+      border-bottom: 4px solid var(--bg-page);
+    }
+
     .clear-button.show {
       position: absolute;
       min-height: 2.5rem;
@@ -82,11 +119,7 @@ aside {
 
     .matching-post {
       border-bottom: 1px solid var(--text-muted);
-      padding-bottom: 0.5rem;
-      margin-bottom: 0.5rem;
-      &:first-of-type {
-        margin-top: 0.5rem;
-      }
+      padding: 0.5rem;
       a {
         display: block;
         border-radius: 0.25rem;
@@ -110,15 +143,19 @@ aside {
     }
   }
 
-  .app-name {
+  h1.app-name {
+    margin: 0;
+    margin-top: 1rem;
     padding: 0 2rem;
     img {
       width: 100%;
+      height: 5rem;
     }
   }
 
   .sidebar-nav {
     padding-right: 1rem;
+    padding-bottom: 2rem;
   
     li {
       --x-spacing: 0.5rem;
