--- a/_theme/sidebar.css
+++ b/_theme/sidebar.css
@@ -19,10 +19,13 @@
       .input-wrap {
         position: sticky;
         padding-left: 0.5rem;
-        padding-right: 3.5rem;
+        padding-right: 4rem;
         order: 99;
         border-top: 4px solid var(--bg-page);
         border-bottom: none;
+      }
+      .clear-button.show {
+        right: 4rem;
       }
     }
   }
@@ -73,8 +76,8 @@ aside.sidebar {
 
     .clear-button.show {
       position: absolute;
-      min-height: 2.5rem;
-      min-width: 2.5rem;
+      min-height: 3rem;
+      min-width: 3rem;
       display: inline-grid;
       place-items: center;
       border-radius: 0.25rem;
@@ -101,8 +104,9 @@ aside.sidebar {
     }
 
     input {
-      height: 2.5rem;
-      padding-right: 2.5rem;
+      height: 3rem;
+      padding-right: 3rem;
+      padding-left: 1rem;
 
       background-color: var(--bg-page);
       border: 1px solid var(--text-muted);
