--- a/_theme/styles.css
+++ b/_theme/styles.css
@@ -140,11 +140,12 @@ article.markdown-section {
 
   /* -- Tabs -- */
   .docsify-tabs {
+    gap:0.5rem;
+
     > button {
       position: relative;
       border: none;
       height: 2.5rem;
-      margin: 0.25rem;
       padding: 0 0.75rem;
 
       &:first-of-type {
@@ -183,8 +184,9 @@ article.markdown-section {
         }
       }
     }
+
     > div {
-      margin-top: 0.25rem;
+      margin-top: -0.125rem;
       margin-left: 0.25rem;
       padding-left: 0.75rem;
       padding-top: 0.25rem;
