--- a/_theme/sidebar-toggle.css
+++ b/_theme/sidebar-toggle.css
@@ -4,13 +4,18 @@ button.sidebar-toggle {
   padding: 0.75rem;
   
   cursor: pointer;
+  border-radius: 0.25rem;
+  transition: left 0.25s ease-out!important;
+  box-shadow:
+    0 0 1px 0px rgba(0,0,0,0.25),
+    0 0 2px 1px rgba(0,0,0,0.25),
+    0 0 6px 4px rgba(0,0,0,0.25),
+    0 0 10px 8px rgba(0,0,0,0.10);
+  
   --bgl-layer: transparent;
   background:
     var(--bg-base)
     linear-gradient(0, var(--bgl-layer), var(--bgl-layer))!important;
-  
-  border-radius: 0.25rem;
-  transition: left 0.25s ease-out!important;
   
   &:hover {
     --bgl-layer: var(--bg-hover);
