--- a/docs/_theme/styles.css
+++ b/docs/_theme/styles.css
@@ -62,7 +62,7 @@ body, article.markdown-section {
       padding: 0;
     }
   }
-  
+
   /* -- Headlines -- */
   
   h1, h2, h3, h4, h5, h6 {
@@ -101,6 +101,61 @@ article.markdown-section {
   p {
     margin-top: 1.25rem;
     margin-bottom: 0.5rem;
+  }
+
+  /* -- Tip / Warn blocks (!> and ?>) --*/
+
+  p.tip, p.warn {
+    position: relative;
+    background: var(--bg-base);
+    border-radius: 0.25rem;
+    border-left: 2px solid;
+    margin: 2rem 0;
+    padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+
+    li > & {
+      margin: 0;
+      padding-top: 0.25rem;
+      padding-right: 0.25rem;
+      padding-bottom: 0.25rem;
+      &:before {
+        top: 0.35rem;
+      }
+    }
+    > code {
+      background-color: var(--bg-active);
+    }
+    
+    &:before {
+      font-family: "Fira Code", monospace;
+      position: absolute;
+      top: 0.65rem;
+      left: 0;
+      translate: calc(-1 * 50% - 1px) 0;
+      height: 1.25rem;
+      width: 1.25rem;
+      
+      text-align: center;
+      line-height: 1.25rem;
+      border-radius: 100%;
+      color: var(--bg-base);
+      font-size: 0.8rem;
+      font-weight: 700;
+    }
+    &.tip {
+      border-color: var(--color-blue);
+      &:before {
+        content: "i";
+        background: var(--color-blue);
+      }
+    }
+    &.warn {
+      border-color: var(--color-red);
+      &:before {
+        content: "!";
+        background: var(--color-red);
+      }
+    }
   }
 
   /* -- Code -- */
